--- a/src/gestures.desktop
+++ b/src/gestures.desktop
@@ -7,4 +7,14 @@ X-KDE-Kded-autoload=true
 X-KDE-Kded-phase=1
 
 Name=Gestures Daemon
+Name[ga]=Deamhan Gothaí
+Name[nl]=Daemon voor gebaren
+Name[pt]=Servidor de Gestos
+Name[uk]=Фонова служба жестів
+Name[x-test]=xxGestures Daemonxx
 Comment=Handle touch gestures
+Comment[ga]=Láimhseáil gothaí tadhaill
+Comment[nl]=Aanraakgebaren behandelen
+Comment[pt]=Lida com os gestos por toque
+Comment[uk]=Обробних жестів, що фіксуються сенсорним пристроєм
+Comment[x-test]=xxHandle touch gesturesxx
