SVN_SILENT made messages (.desktop file)

--- a/src/gestures.desktop
+++ b/src/gestures.desktop
@@ -10,6 +10,8 @@ Name=Gestures Daemon
 Name[ga]=Deamhan Gothaí
 Name[nl]=Daemon voor gebaren
 Name[pt]=Servidor de Gestos
+Name[pt_BR]=Servidor de gestos
+Name[sk]=Démon gest
 Name[sv]=Gestdemon
 Name[uk]=Фонова служба жестів
 Name[x-test]=xxGestures Daemonxx
@@ -17,6 +19,8 @@ Comment=Handle touch gestures
 Comment[ga]=Láimhseáil gothaí tadhaill
 Comment[nl]=Aanraakgebaren behandelen
 Comment[pt]=Lida com os gestos por toque
+Comment[pt_BR]=Lida com gestos por toque
+Comment[sk]=Spravovať dotykové gestá
 Comment[sv]=Hantera pekgester
 Comment[uk]=Обробних жестів, що фіксуються сенсорним пристроєм
 Comment[x-test]=xxHandle touch gesturesxx
