SVN_SILENT made messages (.desktop file)

--- a/src/gestures.desktop
+++ b/src/gestures.desktop
@@ -13,6 +13,7 @@ Name[ga]=Deamhan Gothaí
 Name[nl]=Daemon voor gebaren
 Name[pt]=Servidor de Gestos
 Name[pt_BR]=Servidor de gestos
+Name[ro]=Demon de gesturi
 Name[sk]=Démon gest
 Name[sv]=Gestdemon
 Name[uk]=Фонова служба жестів
@@ -23,6 +24,7 @@ Comment[ga]=Láimhseáil gothaí tadhaill
 Comment[nl]=Aanraakgebaren behandelen
 Comment[pt]=Lida com os gestos por toque
 Comment[pt_BR]=Lida com gestos por toque
+Comment[ro]=Manipulează gesturile tactile
 Comment[sk]=Spravovať dotykové gestá
 Comment[sv]=Hantera pekgester
 Comment[uk]=Обробних жестів, що фіксуються сенсорним пристроєм
