SVN_SILENT made messages (.desktop file)

--- a/src/gestures.desktop
+++ b/src/gestures.desktop
@@ -10,6 +10,7 @@ Name=Gestures Daemon
 Name[cs]=Démon gest
 Name[et]=Žestide deemon
 Name[ga]=Deamhan Gothaí
+Name[gl]=Daemon de acenos
 Name[nl]=Daemon voor gebaren
 Name[pt]=Servidor de Gestos
 Name[pt_BR]=Servidor de gestos
