SVN_SILENT made messages (.desktop file)

--- a/src/gestures.desktop
+++ b/src/gestures.desktop
@@ -10,6 +10,7 @@ Name=Gestures Daemon
 Name[bs]=Demon gestova
 Name[cs]=Démon gest
 Name[et]=Žestide deemon
+Name[fi]=Elepalvelu
 Name[ga]=Deamhan Gothaí
 Name[gl]=Daemon de acenos
 Name[nl]=Daemon voor gebaren
@@ -23,6 +24,7 @@ Name[x-test]=xxGestures Daemonxx
 Comment=Handle touch gestures
 Comment[bs]=Upravlja dodirnim gestovima
 Comment[et]=Puutežestide haldamine
+Comment[fi]=Kosketuseleiden hallinta
 Comment[ga]=Láimhseáil gothaí tadhaill
 Comment[nl]=Aanraakgebaren behandelen
 Comment[pt]=Lida com os gestos por toque
