--- a/src/gestures.desktop
+++ b/src/gestures.desktop
@@ -9,6 +9,7 @@ X-KDE-Kded-phase=1
 Name=Gestures Daemon
 Name[bs]=Demon gestova
 Name[cs]=Démon gest
+Name[de]=Gesten-Dienstprogramm
 Name[et]=Žestide deemon
 Name[fi]=Elepalvelu
 Name[ga]=Deamhan Gothaí
