SVN_SILENT made messages (.desktop file)

--- a/src/gestures.desktop
+++ b/src/gestures.desktop
@@ -27,6 +27,7 @@ Comment[bs]=Upravlja dodirnim gestovima
 Comment[et]=Puutežestide haldamine
 Comment[fi]=Kosketuseleiden hallinta
 Comment[ga]=Láimhseáil gothaí tadhaill
+Comment[gl]=Xestionar os xestos táctiles
 Comment[nl]=Aanraakgebaren behandelen
 Comment[pt]=Lida com os gestos por toque
 Comment[pt_BR]=Lida com gestos por toque
