SVN_SILENT made messages (.desktop file)

--- a/src/gestures.desktop
+++ b/src/gestures.desktop
@@ -20,6 +20,7 @@ Name[pt_BR]=Servidor de gestos
 Name[ro]=Demon de gesturi
 Name[sk]=Démon gest
 Name[sv]=Gestdemon
+Name[tr]=Hareket Yardımcısı
 Name[uk]=Фонова служба жестів
 Name[x-test]=xxGestures Daemonxx
 Comment=Handle touch gestures
@@ -34,5 +35,6 @@ Comment[pt_BR]=Lida com gestos por toque
 Comment[ro]=Manipulează gesturile tactile
 Comment[sk]=Spravovať dotykové gestá
 Comment[sv]=Hantera pekgester
+Comment[tr]=Tokunma hareketlerini ele alın
 Comment[uk]=Обробних жестів, що фіксуються сенсорним пристроєм
 Comment[x-test]=xxHandle touch gesturesxx
