--- a/src/gestures.desktop
+++ b/src/gestures.desktop
@@ -10,6 +10,7 @@ Name=Gestures Daemon
 Name[bs]=Demon gestova
 Name[cs]=Démon gest
 Name[de]=Gesten-Dienstprogramm
+Name[es]=Demonio para gestos
 Name[et]=Žestide deemon
 Name[fi]=Elepalvelu
 Name[ga]=Deamhan Gothaí
@@ -25,6 +26,7 @@ Name[uk]=Фонова служба жестів
 Name[x-test]=xxGestures Daemonxx
 Comment=Handle touch gestures
 Comment[bs]=Upravlja dodirnim gestovima
+Comment[es]=Maneja los gestos táctiles
 Comment[et]=Puutežestide haldamine
 Comment[fi]=Kosketuseleiden hallinta
 Comment[ga]=Láimhseáil gothaí tadhaill
