SVN_SILENT made messages (.desktop file)

--- a/src/gestures.desktop
+++ b/src/gestures.desktop
@@ -15,6 +15,7 @@ Name[et]=Žestide deemon
 Name[fi]=Elepalvelu
 Name[ga]=Deamhan Gothaí
 Name[gl]=Daemon de acenos
+Name[mr]=इशारे डीमन
 Name[nl]=Daemon voor gebaren
 Name[pt]=Servidor de Gestos
 Name[pt_BR]=Servidor de gestos
@@ -31,6 +32,7 @@ Comment[et]=Puutežestide haldamine
 Comment[fi]=Kosketuseleiden hallinta
 Comment[ga]=Láimhseáil gothaí tadhaill
 Comment[gl]=Xestionar os xestos táctiles
+Comment[mr]=स्पर्श इशारे हाताळा
 Comment[nl]=Aanraakgebaren behandelen
 Comment[pt]=Lida com os gestos por toque
 Comment[pt_BR]=Lida com gestos por toque
